<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_vertical"
  android:background="@drawable/www"
  >
   <!-- Screen Design for Photos -->
  	
  	<LinearLayout
  	    android:layout_width="fill_parent"
  	    android:layout_height="fill_parent"
  	    android:gravity="center_vertical">
  	    
  	    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_vertical"
      android:layout_marginTop="70dp">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">
	    <Button
	        android:id="@+id/transform"
	        android:layout_width="164dp"
	        android:layout_height="wrap_content"
	        android:alpha="0.8"
	        android:background="@drawable/gumb"
	        android:text="@string/Transform"
	        android:textColor="#FFFFFF" />
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">
	    <Button
	        android:id="@+id/LoseFat"
	        android:layout_width="153dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/gumb"
	        android:text="@string/LoseFat" 
	        android:textColor="#FFFFFF"
	        android:alpha="0.8"/>
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
		    <Button
		        android:id="@+id/BuildMuscle"
		        android:layout_width="193dp"
		        android:layout_height="wrap_content"
		        android:alpha="0.8"
		        android:background="@drawable/gumb"
		        android:text="@string/MuscleBuild"
		        android:textColor="#FFFFFF" />
     </LinearLayout>
     </LinearLayout>
  	    
  	</LinearLayout>
</LinearLayout>